--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Web Application Manifest Sample",
+  "name": "Narrador - AVALON",
   "icons": [
     {
       "src": "launcher-icon-0-75x.png",
